--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "exiletradelens"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["Anton Shevchenko <korolewsky.anton3@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
