--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,3 +30,5 @@ arboard = "3"
 image = "0.25"
 tauri-plugin-global-shortcut = "2.3.1"
 once_cell = "1.19"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
